# lintymclintface

./: .gitignore  Cargo.toml  INSTRUCTIONS.md  LICENSE  README.md  WORKSPACE  install.sh  test.sh  test_HikariCP.sh  test_javalin.sh  test_javapoet.sh  test_json-simple.sh
docker/: Dockerfile  README.md
errata/: errata.md
examples/: lint_java_repo.sh  lint_python_repo.sh  lint_r_repo.sh
src/: lib.rs  main.rs
src/linters/: java.rs  mod.rs  python.rs  r.rs
src/main/java/com/example/: BUILD  Main.java
src/test/java/com/example/: BUILD  GreeterTest.java
tests/: java_lint_tests.rs  linter_tests.rs
tests/failing/: IncorrectKeywordCase.java  InvalidKeyword.java  InvalidKeyword2.java  InvalidMethodDeclaration.java  JavalinIssue.java  MissingSemicolon.java  UnbalancedBraces.java  syntax_error_python.py  syntax_error_r.R
tests/working/: GenericsWildcard.java  Java21Features.java  Java21Preview.java  Java24Features.java  LambdaExpression.java  TryWithResources.java  hello_python.py  hello_r.R
vibe-coding-example/: GEMINI.md
