[package]
name = "lintymclintface"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tree-sitter = "0.20.10"
tree-sitter-java = "0.20.1"
tree-sitter-python = "0.20.4"
tree-sitter-r = "0.19.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
prometheus = "0.13"
lazy_static = "1.4"